--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ bytemuck = {version = "1.4", features=["derive"]}
 image = {version = "0.24", default-features=false, features=["png", "jpeg"]}
 glam = {version = "*", features=["bytemuck"] }
 rand = {version = "*"}
+
+imgui = "0.10"
+imgui-winit-support = { version = "0.10"  }
+imgui-wgpu = {version = "0.22"}
