added puffin profiller

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,5 @@ rand = { version = "*" }
 egui = { version = "0.24" }
 egui-winit = { version = "0.24" }
 egui-wgpu = { version = "0.24" }
-
-
-# imgui = "0.11"
-# imgui-winit-support = { version = "0.11" }
-# imgui-wgpu = { git = "https://github.com/Calcoph/imgui-wgpu-rs.git" }
+puffin = "0.18.1"
+puffin_http = "0.15.0"
