--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bytemuck = { version = "1.4", features = ["derive"] }
 image = { version = "0.24", default-features = false, features = [
     "png",
     "jpeg",
+    "hdr",
 ] }
 glam = { version = "*", features = ["bytemuck"] }
 rand = { version = "*" }
