--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ winit = { version = "0.28" }
 wgpu = "0.18"
 pollster = "0.2"
 bytemuck = { version = "1.4", features = ["derive"] }
-image = { version = "0.24", default-features = false, features = [
+image = { version = "0.24.8", default-features = false, features = [
     "png",
     "jpeg",
     "hdr",
+    "exr",
 ] }
 glam = { version = "*", features = ["bytemuck"] }
 rand = { version = "*" }
