--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ image = { version = "0.24.8", default-features = false, features = [
 glam = { version = "*", features = ["bytemuck"] }
 rand = { version = "*" }
 
+egui_extras = { version = "0.24", features = ["all_loaders"] }
 egui = { version = "0.24" }
 egui-winit = { version = "0.24" }
 egui-wgpu = { version = "0.24" }
