--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ egui-winit = { version = "0.27.2" }
 egui-wgpu = { version = "0.27.2" }
 puffin = "0.18.1"
 puffin_http = "0.15.0"
+
+[dev-dependencies]
+ktx2 = "*"
