--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ winit = { version = "0.30.12" }
 wgpu = "27.0.1"
 pollster = "0.2"
 bytemuck = { version = "1.4", features = ["derive"] }
+futures = "*"
 image = { version = "0.24.8", default-features = false, features = [
     "png",
     "jpeg",
